--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -21,19 +21,20 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
 
+    <ImageButton
+        android:id="@+id/set_btn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignBottom="@+id/imageView7"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/set_btn"
+        tools:layout_editor_absoluteX="304dp"
+        tools:layout_editor_absoluteY="465dp" />
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <ImageButton
-            android:id="@+id/set_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignBottom="@+id/imageView7"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/set_btn"
-            tools:layout_editor_absoluteX="304dp"
-            tools:layout_editor_absoluteY="465dp" />
 
         <ImageView
             android:id="@+id/imageView"
