--- a/app/src/main/res/layout/activity_quiz1__screen.xml
+++ b/app/src/main/res/layout/activity_quiz1__screen.xml
@@ -42,9 +42,9 @@
             android:id="@+id/question1"
             android:layout_width="300dp"
             android:layout_height="70dp"
-            android:layout_below="@+id/score_text"
-            android:layout_marginTop="23dp"
-            android:layout_toStartOf="@+id/score"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="59dp"
             android:padding="8dp"
             android:text="Which thing is alive?"
             android:textAlignment="textStart"
