--- a/app/src/main/res/layout/activity_result2.xml
+++ b/app/src/main/res/layout/activity_result2.xml
@@ -44,7 +44,7 @@
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/retry"
+            android:id="@+id/retry2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
