--- a/app/src/main/res/layout/activity_result2.xml
+++ b/app/src/main/res/layout/activity_result2.xml
@@ -29,19 +29,19 @@
             android:textSize="24sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/outOf"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/retry"
-            android:layout_alignStart="@+id/grade"
-            android:layout_marginBottom="68dp"
+    <TextView
+        android:id="@+id/outOf"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
 
-            android:padding="16dp"
-            android:text="You scored 1 out of 3"
-            android:textAlignment="center"
-            android:textColor="@android:color/background_light"
-            android:textSize="20sp" />
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="209dp"
+        android:padding="16dp"
+        android:text="You scored 1 out of 3"
+        android:textAlignment="center"
+        android:textColor="@android:color/background_light"
+        android:textSize="20sp" />
 
         <Button
             android:id="@+id/retry2"
