--- a/app/src/main/res/layout/fragment_tab2.xml
+++ b/app/src/main/res/layout/fragment_tab2.xml
@@ -24,6 +24,26 @@
             android:adjustViewBounds="false"
             android:background="@drawable/fortune"
             android:gravity="center" />
+
+        <ImageButton
+            android:id="@+id/fortuneImage"
+            android:layout_width="301dp"
+            android:layout_height="244dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="120dp"
+            android:src="@drawable/myscrolnew"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/txtFortune"
+            android:layout_width="262dp"
+            android:layout_height="124dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="142dp"
+            android:textSize="40px" />
+
     </RelativeLayout>
 
     <ImageView
